<resources>
    <string name="app_name">uMAP</string>
    <string name="umap_path">umap</string>

    <string name="dashboard">Dashboard</string>
    <string name="my_collection">My Collection</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="submit">Submit</string>
    <string name="paste_auth_label">Paste Here:</string>
    <string name="temp">temp</string>
    <string name="search">Search</string>
    <string name="marketplace">Marketplace</string>
    <string name="search_hint">Search by Artist, Title, Label, Record Shop …</string>
    <string name="not_logged_in_to_gemm">Not logged in to Gemm</string>
    <string name="not_logged_in_to_discogs">Not logged in to Discogs</string>
    <string name="logged_in_to_gemm">Logged in to Gemm</string>
    <string name="logged_in_to_discogs">Logged in to Discogs</string>
    <string name="sample_text">Sample Text</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="no_profile">No Profile Loaded</string>
    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>
    <string name="collection">Collection</string>
    <string name="wishlist">Wish List</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="placeholder">placeholder</string>
    <string name="login_success">Login Successful!</string>

    <string name="genre_x">Genre: %s</string>
    <string name="style_x">Style: %s</string>

    <!-- Accessibility -->
    <string name="desc_album_cover">The album cover for the selected release.</string>
    <string name="desc_caret">A caret pointing downward, indicating that this item can be expanded to display more information.</string>

    <!-- Api Error Toasts -->
    <string name="error_network">No network access.</string>
    <string name="error_response">Response error. Status: %s</string>
    <string name="error_no_content">Discogs couldn\'t find the requested resource.</string>
    <string name="error_unauthorized">Unauthorized Request.</string>
    <string name="error_conversion">Gson exploded. Check your model.</string>
    <string name="error_unknown">Unknown Error.</string>
</resources>
