<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/drawer_home"
            android:checked="true"
            android:icon="@drawable/ic_home_white_24dp"
            android:title="@string/home" />

        <item
            android:id="@+id/collection"
            android:icon="@drawable/ic_library_music_black_24dp"
            android:title="@string/collection" />

        <item
            android:id="@+id/marketplace"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/marketplace" />

        <item
            android:id="@+id/drawer_account"
            android:icon="@drawable/ic_account_box_black_24dp"
            android:title="@string/account" />

        <item
            android:id="@+id/drawer_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />

    </group>
</menu>