<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/profile_photo"
            android:layout_width="@dimen/nav_profile_photo"
            android:layout_height="@dimen/nav_profile_photo"
            android:adjustViewBounds="true"
            android:contentDescription="@string/profile_photo"/>

        <Space
            android:layout_width="@dimen/small_spacer"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/profile_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_text" />

            <TextView
                android:id="@+id/logged_in_to_discogs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_logged_in_to_discogs" />

            <TextView
                android:id="@+id/logged_in_to_gemm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_logged_in_to_gemm" />

        </LinearLayout>

    </LinearLayout>

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:background="@android:color/transparent"
        android:alpha="0.75"
        tools:context=".NavigationDrawerFragment" />
</LinearLayout>